[package]
name = "system-metrics"
version = "0.1.0"
authors = ["Daniel Castillo <danielmcasv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.1"
rocket_contrib = "0.4.1"
sysinfo = "0.8.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"